Exercises/My_workspace/host/.metadata/.plugins/org.eclipse.cdt.ui/exercise 5.3.build.log
13:56:27 **** Rebuild of configuration Debug for project exercise 5.3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:18:3: error: increment of read-only location '*ptr'
   ++(*ptr);
   ^~

13:56:27 Build Failed. 1 errors, 0 warnings. (took 264ms)

